# MARBLE

./: .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  cleanup_mert330m.py  cleanup_mert330m.sh  cli.py  download.py  modal_marble.py  pyproject.toml  setup.py  wandb_checkpoint_audit.py
configs/: fewshot.MERT-v1-95M.GTZANGenre.yaml  finetune.MERT-v1-95M.GTZANGenre.yaml  probe.CLaMP3-layers.Covers80.yaml  probe.CLaMP3-layers.EMO.yaml  probe.CLaMP3-layers.GS.yaml  probe.CLaMP3-layers.GTZANGenre.yaml  probe.CLaMP3-layers.HXMSA.yaml  probe.CLaMP3-layers.HookTheoryKey.yaml  probe.CLaMP3-layers.HookTheoryStructure.yaml  probe.CLaMP3-layers.NSynth.yaml  probe.CLaMP3-layers.SHS100K.yaml  probe.CLaMP3-layers.SuperMarioStructure.yaml  probe.CLaMP3-layers.VGMIDITVar-leitmotif.yaml  probe.CLaMP3-layers.VGMIDITVar-multisf.yaml  probe.CLaMP3-layers.VGMIDITVar-timbre.yaml  probe.CLaMP3-layers.VGMIDITVar.yaml  probe.CLaMP3-layers.VGMLoopStructure.yaml  probe.CLaMP3-meanall.Covers80.yaml  probe.CLaMP3-meanall.EMO.yaml  probe.CLaMP3-meanall.GS.yaml  probe.CLaMP3-meanall.GTZANGenre.yaml  probe.CLaMP3-meanall.HXMSA.yaml  probe.CLaMP3-meanall.HookTheoryKey.yaml  probe.CLaMP3-meanall.HookTheoryStructure.yaml  probe.CLaMP3-meanall.MTGGenre.yaml  probe.CLaMP3-meanall.MTGInstrument.yaml  probe.CLaMP3-meanall.MTGMood.yaml  probe.CLaMP3-meanall.MTGTop50.yaml  probe.CLaMP3-meanall.MTT.yaml  probe.CLaMP3-meanall.NSynth.yaml  probe.CLaMP3-meanall.SHS100K.yaml  probe.CLaMP3-meanall.SuperMarioStructure.yaml  probe.CLaMP3-meanall.VGMIDITVar-leitmotif.yaml  probe.CLaMP3-meanall.VGMIDITVar-multisf.yaml  probe.CLaMP3-meanall.VGMIDITVar-timbre.yaml  probe.CLaMP3-meanall.VGMIDITVar.yaml  probe.CLaMP3-meanall.VGMLoopStructure.yaml  probe.CLaMP3-symbolic-abc-layers.BPSMotifMNID.yaml  probe.CLaMP3-symbolic-abc-layers.BPSMotifRetrieval.yaml  probe.CLaMP3-symbolic-abc-layers.BPSMotifWithinPieceN1.yaml  (+307 more)
data/ir/: README.md
docs/: README.md  SuperMarioStructure.md  TODO.md  analysis_scripts_inventory.md  anisotropy.md  benchmarking_methodology.md  bps_motif_abc_vs_mtf.md  bps_motif_mnid_clamp3_layersweep.md  bps_motif_retrieval_clamp3_layersweep.md  clamp3_contrastive_training_plan.md  embedding_cache.md  embedding_cache_correctness.md  handoff_muq_findings.md  jkupdd_abc_vs_mtf.md  jkupdd_abc_vs_mtf_leaderboard.csv  jkupdd_retrieval_clamp3_layersweep.md  jkupdd_retrieval_clamp3_leaderboard.csv  kern_sourcing_bps_jkupdd.md  layer_analysis.md  layer_combination_search_plan.md  layer_sweeps_plan.md  leitmotif_clamp3.md  leitmotif_findings.md  leitmotif_layer_transfer_todos.md  leitmotif_swtc.md  local_sweeps.md  medleydb_instrument_activation_plan.md  medleydb_leitmotif_eval_strategy.md  medleydb_melody_sweep_plan.md  medleydb_remix_invariance_plan.md  modal_sweeps.md  mtc_ann_abc_vs_mtf.md  mtc_ann_scoping.md  mtc_dataset_download_howto.md  multihead_probe_validation.md  nsynth_optimization_plan.md  optimization_roadmap_2026-07.md  optimization_uniformity_audit.md  performance_optimizations.md  post_defense_master_todos.md  (+11 more)
docs/data/: bps_abc_vs_mtf_leaderboard.csv  bps_mnid_leaderboard.csv  bps_mnid_summary.json  bps_motif_setup.md  bps_retrieval_maps.json  hooktheory.md  hooktheory_melody_setup.md  hxmsa_setup.md  mtc_ann_abc_vs_mtf_leaderboard.csv  omar_rq_audit.md  shs100k.md  supermario_clamp3_symbolic_benchmark.md  supermario_setup.md  vgmiditvar_setup.md
marble/core/: base_datamodule.py  base_task.py  utils.py
marble/modules/: callbacks.py  decoders.py  test_metrics.py  transforms.py
marble/utils/: emb_cache.py  path_compat.py  per.py  retrieval_fused.py  retrieval_metrics.py  retrieval_scores.py  sweep_coords.py
scripts/: best_layer.py  build_hooktheory_melody_jsonl.py  build_vgmiditvar_dataset.py  convert_shs100k_to_flac.py  download_covers80.py  download_hooktheory.py  download_nsynth.py  download_shs100k.py  finetune.HuBERT-Base.LibriSpeechASR.sh  gen_sweep_configs.py  inspect_leitmotif_labels.py  modal_run_all_sweeps.py  modal_sweep.py  probe.CLaMP3.GTZANGenre.sh  probe.CLaMP3.MTGGenre.sh  probe.CLaMP3.MTGInstrument.sh  probe.CLaMP3.MTGMood.sh  probe.CLaMP3.MTGTop50.sh  probe.CLaMP3.MTT.sh  probe.Chroma.Chords1217.sh  probe.Chroma.GS.sh  probe.DaSheng.Chords1217.sh  probe.DaSheng.GS.sh  probe.DaSheng.GTZANGenre.sh  probe.MERT-v1-95M.Chords1217.sh  probe.MERT-v1-95M.EMO.sh  probe.MERT-v1-95M.GS.sh  probe.MERT-v1-95M.GTZANBeatTracking.sh  probe.MERT-v1-95M.GTZANGenre.sh  probe.MERT-v1-95M.HookTheoryKey.sh  probe.MERT-v1-95M.MTGGenre.sh  probe.MERT-v1-95M.MTGInstrument.sh  probe.MERT-v1-95M.MTGMood.sh  probe.MERT-v1-95M.MTGTop50.sh  probe.MERT-v1-95M.MTT.sh  probe.MERT-v1-95M.MergeGSHT.sh  probe.MuQ.Chords1217.sh  probe.MuQ.EMO.sh  probe.MuQ.GS.sh  probe.MuQ.GTZANBeatTracking.50hz.sh  (+40 more)
scripts/analysis/: best_layer.py  ceiling_mnid_bar_granularity.py  compare_encoders_vgmiditvar_timbre.py  fix_wandb_runs.py  hooktheory_melody_export.py  vgm_timbre_report.py  (+12 more)
tests/: asr.py  benchmark_Chords1217.py  commit_model.py  download_model.py  test_Chords1217_dataset.ipynb  test_DifferentiableTempoEstimator.py  test_GTZANBeatTracking_dataset.ipynb  test_GTZAN_dataset.py  test_TimeEventFMeasure.py  test_checkpoint_encoder_strip.py  test_clamp3_abc_util.py  test_compute_map_self_exclusion.py  test_convert_audio_format.py  test_convert_vgm_corpus_to_jsonl.py  test_cover_retrieval_integration.py  test_cover_retrieval_score_dump.py  test_download_nsynth.py  test_emb_cache_frames.py  test_emb_cache_ram.py  test_emb_cache_slugs.py  test_encoder_eval_under_train_propagation.py  test_gen_sweep_configs.py  test_gen_within_piece_n_configs.py  test_hmm.py  test_hmm_consistency.py  test_hmm_speed.py  test_hooktheorymelody_changes.py  test_instantiate_recursive.py  test_jkupdd_abc_build.py  test_jkupdd_summary_dir_parse.py  test_layer_softmax_sum_frozen.py  test_log_sweep_coords_callback.py  test_medleydb_melody_datamodule.py  test_medleydb_melody_labels.py  test_medleydb_split.py  test_multihead_probe.py  test_muq_configs_use_correct_extractor.py  test_path_compat.py  test_qwen2.5omni_encoder.py  test_qwen2audio.py  (+24 more)
(+216 files in other folders)
