# Install system deps before running `uv sync`:
#   macOS:  brew install ffmpeg@7        (torchaudio 2.7 supports ffmpeg 4–7; brew's
#                                         default `ffmpeg` is currently 8.x and is
#                                         unsupported — torchaudio falls back to the
#                                         libsndfile backend which can't read .m4a.
#                                         If you have ffmpeg 8 installed, also run:
#                                         export DYLD_FALLBACK_LIBRARY_PATH=
#                                             /opt/homebrew/opt/ffmpeg@7/lib)
#   Linux:  sudo apt install ffmpeg      (apt's ffmpeg is typically 4–6, works as-is)

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "marble"
version = "0.2.0"
description = "Marble: a framework for SSL-based audio tasks"
requires-python = ">=3.10"
authors = [
  { name = "Ruibin Yuan" },
]
dependencies = [
    "lightning==2.5.1",
    "torch==2.7.0",
    "torchaudio==2.7.0",
    "jsonargparse[signatures]>=4.27.7",
    "albumentations==1.4.4",
    "transformers==4.52.3",
    "datasets==3.6.0",
    "peft==0.15.2",
    "einops",
    "requests",
    "librosa",
    "omegaconf",
    "wandb",
    "mir_eval",
    "pretty_midi",
    "mido",          # marble/encoders/CLaMP3/midi_util.py — MIDI→MTF conversion
    "yt-dlp",        # download_hooktheory.py
    "numpy>=1.19",
    "scipy>=1.5",
    "numba",         # GTZANBeatTracking HMM (replaces the old Cython extension)
    "omar-rq @ git+https://github.com/MTG/omar-rq.git",  # OMARRQ encoder
    "hf-xet>=1.5.0",
]

[project.optional-dependencies]
# uv sync --extra xcodec
xcodec = [
    "descript-audiotools @ git+https://github.com/descriptinc/audiotools",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["marble", "marble.*"]

# ── uv: PyTorch CUDA wheels (Windows / Linux GPU machine) ────────────────────
# On macOS, the default PyPI CPU-only builds are used automatically.
# CUDA 12.8 + PyTorch 2.7.0 is required for Blackwell GPUs (RTX 5060 Ti, sm_120).
[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu128", marker = "sys_platform != 'darwin'" },
]
torchaudio = [
  { index = "pytorch-cu128", marker = "sys_platform != 'darwin'" },
]
