# Install system deps before running `uv sync`:
#   macOS:  brew install ffmpeg@7        (torchaudio 2.7 supports ffmpeg 4–7; brew's
#                                         default `ffmpeg` is currently 8.x and is
#                                         unsupported — torchaudio falls back to the
#                                         libsndfile backend which can't read .m4a.
#                                         If you have ffmpeg 8 installed, also run:
#                                         export DYLD_FALLBACK_LIBRARY_PATH=
#                                             /opt/homebrew/opt/ffmpeg@7/lib)
#   Linux:  sudo apt install ffmpeg      (apt's ffmpeg is typically 4–6, works as-is)

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "marble"
version = "0.2.0"
description = "Marble: a framework for SSL-based audio tasks"
requires-python = ">=3.10"
authors = [
  { name = "Ruibin Yuan" },
]
dependencies = [
    # ── Training core (used by every probe/sweep) ──────────────────────────
    "lightning==2.5.1",
    "torch==2.7.0",
    "torchaudio==2.7.0",
    "jsonargparse[signatures]>=4.27.7",
    "albumentations==1.4.4",
    "transformers==4.52.3",
    "datasets==3.6.0",
    "peft==0.15.2",
    "einops",
    "requests",
    "librosa",
    "omegaconf",
    "wandb",
    "mir_eval",
    "torchmetrics",      # implicit before; pinned explicitly here
    "soundfile",         # audio I/O backend for librosa
    "numpy>=1.19",
    "scipy>=1.5",
    # ── HF infrastructure (transitive but pinned to avoid drift) ───────────
    "huggingface_hub>=0.24.0",
    "hf-xet>=1.5.0",
    "accelerate",
    "matplotlib>=3.10.9",
]

# Task-/script-specific deps live in extras. uv sync without any --extra
# gets you the smallest working image (audio tasks with HF-backed encoders
# like MERT, MuQ, MusicFM); add extras when you need the corresponding
# task. Local developers who want everything: `uv sync --all-extras`.
[project.optional-dependencies]
# uv sync --extra omarrq
# Required for OMARRQ_*_Encoder. Pulls a sizable transitive chain
# (nnaudio, samplings, omar-rq internals) — only install when actually
# running OMAR-RQ probes/sweeps.
omarrq = [
    "omar-rq @ git+https://github.com/MTG/omar-rq.git",
]
# uv sync --extra symbolic-midi
# Required for any task that ingests MIDI through marble (CLaMP3
# symbolic-MIDI path, BPS-Motif, VGMIDITVar, SuperMarioStructure MIDI
# segments). `mido` parses .mid; `pretty_midi` is used by
# marble/utils/theory/lead_sheet.py for HookTheoryStructure analytics.
symbolic-midi = [
    "mido",
    "pretty_midi",
]
# uv sync --extra symbolic-abc
# Required for the ABC path on SuperMarioStructure (and any future
# task that wants CLaMP3-symbolic's bar-level ABC tokenisation instead
# of MIDI/MTF). music21 handles .mxl → musicxml + bar-range slicing;
# the vendored xml2abc handles musicxml → ABC; abctoolkit handles the
# post-xml2abc cleanup + voice-rotation that CLaMP3 used during training.
# See docs/data/supermario_setup.md § Option E.
symbolic-abc = [
    "music21>=9.0",
    "abctoolkit>=0.0.4",
]
# uv sync --extra xcodec
xcodec = [
    "descript-audiotools @ git+https://github.com/descriptinc/audiotools",
    "matplotlib",   # marble/encoders/Xcodec/utils/utils.py uses pyplot
]
# uv sync --extra gtzan-beat
# Required for GTZANBeatTracking probe (numba-accelerated HMM in
# marble/tasks/GTZANBeatTracking/madmom/hmm_numba.py).
gtzan-beat = [
    "numba",
]
# uv sync --extra ninsheetmusic   (then `playwright install chromium`)
# Data-prep only: scripts/data/download_ninsheetmusic.py for the
# SuperMarioStructure MIDI source. NSM blocks non-browser HTTP requests
# (403); Playwright + patchright drive a real Chromium.
ninsheetmusic = [
    "playwright>=1.40",
    "playwright-stealth>=2.0",
    "patchright>=1.59.1",
]
# uv sync --extra data-prep
# Data-prep only: download / convert scripts. Not needed at training time
# when the relevant dataset is already on disk or a Modal volume.
data-prep = [
    "yt-dlp",     # download_hooktheory.py — YouTube audio recovery
]
# uv sync --extra analysis
# Plotting / analytics for scripts/analysis/*. Not needed at training time.
analysis = [
    "matplotlib",
    "seaborn",
    "scikit-learn",
]

[dependency-groups]
# Install with: uv sync --group dev
dev = [
    "ruff>=0.13",
    "pre-commit>=4.0",
    "pytest>=8.0",
    "pytest-xdist>=3.8.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["marble", "marble.*"]

# ── ruff: linter + formatter ────────────────────────────────────────────────
# Run manually with `uv run ruff check .` and `uv run ruff format .`.
# Pre-commit (`pre-commit install` once, then automatic on every commit)
# wires both to the staged .py files via .pre-commit-config.yaml.
[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = [
    # Third-party encoder code vendored verbatim — don't touch upstream style.
    "marble/encoders/CLaMP3/M2_modules",
    "marble/encoders/CLaMP3/midi_util.py",
    "marble/encoders/MERT",
    "marble/encoders/MuQ",
    "marble/encoders/MusicFM",
    "marble/encoders/Xcodec",
    "marble/encoders/Dasheng",
    # Third-party tool vendored verbatim under LGPL — must stay byte-identical.
    "scripts/data/_vendor",
    # Generated per-layer sweep configs — auto-emitted YAML, not Python anyway.
    "configs/sweeps",
    "output",
    "wandb",
]

[tool.ruff.lint]
# Conservative starter set; we can expand later. Rationale:
#   E, F, W : pycodestyle errors + pyflakes — must-fix bugs
#   I       : isort — keep imports sorted
#   UP      : pyupgrade — modernise to py310+ syntax
#   B       : flake8-bugbear — likely-bug patterns
#   SIM     : flake8-simplify — clearer code, low false-positive rate
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = [
    # Style rules we deliberately don't enforce on a research codebase:
    "E501",   # line too long — line-length is 100 but enforcement is noisy
    "E741",   # ambiguous variable name (l, I, O) — common in ML code
    "B008",   # function call in default argument — used for Path/Tensor defaults
    "SIM108", # ternary instead of if/else — readability-judgment call
]

[tool.ruff.lint.per-file-ignores]
# Test / benchmark scripts: many cd-before-import patterns, unused
# assignments-for-side-effect, and zip-without-strict that are
# intentional in test scripts.
"tests/**" = ["F401", "B007", "B011", "B023", "B905", "E402", "F841",
              "SIM102", "SIM105", "SIM113", "SIM115", "SIM118", "UP035"]
# Diagnostics scripts often print things — print statements are intentional
"scripts/diagnostics/**" = ["T201", "E402", "SIM102", "SIM118"]
# Data-prep & verify scripts: similar concerns to tests/
"scripts/data/**"   = ["B007", "B905", "F841", "SIM102", "SIM105", "SIM113", "SIM118"]
"scripts/verify/**" = ["B007", "B905", "F841", "SIM102", "SIM105", "SIM113", "SIM118"]
# Modal sweep scripts mirror per-layer scripts and use the same idioms
"scripts/sweeps/modal/**" = ["B007", "B905", "F841", "SIM102", "SIM105"]
# Top-level scratch / SOTA reproduction code
"sota/**" = ["F401", "F841", "E402", "B007", "B905", "SIM102", "SIM105", "UP035"]

[tool.ruff.format]
# Match ruff's defaults; mostly matches black.
quote-style = "double"
indent-style = "space"

# ── uv: PyTorch CUDA wheels (Windows / Linux GPU machine) ────────────────────
# On macOS, the default PyPI CPU-only builds are used automatically.
# CUDA 12.8 + PyTorch 2.7.0 is required for Blackwell GPUs (RTX 5060 Ti, sm_120).
[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu128", marker = "sys_platform != 'darwin'" },
]
torchaudio = [
  { index = "pytorch-cu128", marker = "sys_platform != 'darwin'" },
]
